修复pnpm新版本导致ci构建失败